crates/liar-core/src/cfg/snapshots/liar_core__cfg__build__tests__cfg_sequence.snap
---
source: crates/liar-core/src/cfg/build.rs
assertion_line: 504
expression: cfg.to_dot(name)
---
digraph sequence {
  node [shape=box];
  b0 [label="entry"];
  b1 [label="exit: return"];
  b2 [label="exit: raised"];
  b0 -> b1;
}
